tests/__snapshots__/api-toAcceptProps-special-cases-stderr.snap.txt
Error: Component does not accept props of the given type.

Type '{}' is not assignable to type '{ one: string; }'.
Property 'one' is required in type '{ one: string; }'.

  21 |     expect(Default).type.toAcceptProps({ one: "sample" });
  22 | 
  23 |     expect(Default).type.toAcceptProps({}); // fail
     |                                        ~~
  24 |     expect(Default).type.toAcceptProps({ two: false }); // fail
  25 |     expect(Default).type.toAcceptProps({ one: false }); // fail
  26 |   });

       at ./__typetests__/special-cases.tst.tsx:23:40 ❭ special cases ❭ when the 'props' argument has a default value

Error: Component does not accept props of the given type.

Type '{ two: boolean; }' is not compatible with type '{ one: string; }'.
Property 'two' does not exist in type '{ one: string; }'.

  22 | 
  23 |     expect(Default).type.toAcceptProps({}); // fail
  24 |     expect(Default).type.toAcceptProps({ two: false }); // fail
     |                                          ~~~
  25 |     expect(Default).type.toAcceptProps({ one: false }); // fail
  26 |   });
  27 | 

       at ./__typetests__/special-cases.tst.tsx:24:42 ❭ special cases ❭ when the 'props' argument has a default value

Error: Component does not accept props of the given type.

Type '{ two: boolean; }' is not assignable to type '{ one: string; }'.
Property 'one' is required in type '{ one: string; }'.

  22 | 
  23 |     expect(Default).type.toAcceptProps({}); // fail
  24 |     expect(Default).type.toAcceptProps({ two: false }); // fail
     |                                        ~~~~~~~~~~~~~~
  25 |     expect(Default).type.toAcceptProps({ one: false }); // fail
  26 |   });
  27 | 

       at ./__typetests__/special-cases.tst.tsx:24:40 ❭ special cases ❭ when the 'props' argument has a default value

Error: Component does not accept props of the given type.

Type '{ one: boolean; }' is not assignable to type '{ one: string; }'.
Types of property 'one' are incompatible.
Type 'boolean' is not assignable to type 'string'.

  23 |     expect(Default).type.toAcceptProps({}); // fail
  24 |     expect(Default).type.toAcceptProps({ two: false }); // fail
  25 |     expect(Default).type.toAcceptProps({ one: false }); // fail
     |                                          ~~~
  26 |   });
  27 | 
  28 |   test.todo("when the 'props' is a union", () => {

       at ./__typetests__/special-cases.tst.tsx:25:42 ❭ special cases ❭ when the 'props' argument has a default value

